Devworks/src/objects/MDM__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MasterRecordId__c</fullName>
        <defaultValue>&quot;Temp&quot;</defaultValue>
        <label>MasterRecordId</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Business Account</fullName>
                </value>
                <value>
                    <fullName>Business Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Status__c</fullName>
        <label>Record Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <label>System Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GEN</fullName>
                </value>
                <value>
                    <fullName>OLNACS</fullName>
                </value>
                <value>
                    <fullName>RAGE</fullName>
                </value>
                <value>
                    <fullName>CFX</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MDM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>External_Id__c</columns>
        <columns>MasterRecordId__c</columns>
        <columns>Record_Status__c</columns>
        <columns>RecordType__c</columns>
        <columns>System_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MDM-{0000}</displayFormat>
        <label>MasterRecordNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>